{
    "version": 1,
    "name": "SkillAction",
    "maps": [
        {
            "name": "SkillAction",
            "id": "a351d4de-521d-4270-97b4-af23b1fa460c",
            "actions": [
                {
                    "name": "DefaultSkill",
                    "type": "Button",
                    "id": "efe60bc3-b3fe-4318-8986-7fad32e9173c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill1",
                    "type": "Button",
                    "id": "79b33b66-fb2d-45fc-a042-3d69cd63124e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill2",
                    "type": "Button",
                    "id": "a8561393-8e4d-46b5-8d53-f90d953e4ac9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SubSkill",
                    "type": "Button",
                    "id": "d0aae3aa-90ca-473a-b278-84b2c0efddfc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Item",
                    "type": "Button",
                    "id": "0c1fcd3f-4b52-456b-b3a0-907f2071eda9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6a7f91d7-daae-4e80-b236-0640f86609d8",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DefaultSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "263b007e-45f3-446f-a139-77e59e9747b2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08171645-3de5-49b2-82da-ff0e535d801f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc26630e-edb7-4ea6-ac89-458e9d220e5a",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SubSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b553437e-760a-49a5-ac63-8b1383b23182",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}