{
    "version": 1,
    "name": "InputManager",
    "maps": [
        {
            "name": "PlayerActions",
            "id": "7a4b6dc4-1c90-4821-92a5-f97bd3461d06",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "16f8b075-abee-4a6b-a873-6181f8f77e96",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Active",
                    "type": "Button",
                    "id": "551d24d7-2ad7-4492-83a0-ae9fcb8ca44c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "73bd7d6d-b84f-449a-8383-44c90276b7a0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "62c6d0a7-42ba-461d-8f2d-8ec6c7529f5e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ad9a5a68-4569-48a1-a652-09f73ba3e931",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a4b30bbf-9597-45be-a0c5-cf19a18a7756",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "52637488-4829-40ef-a918-81608a7d57e3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6c07cd23-7b52-4f59-8e8c-1fa1bc640cf2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Active",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a37d6590-c109-44e4-a45f-bad2a1875e70",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Active",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdfde272-4ca7-49ef-b534-e464d3952c6c",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Active",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mobile",
            "id": "b02ab539-a225-4fcf-94bb-2b74b3a53cc6",
            "actions": [
                {
                    "name": "press",
                    "type": "Value",
                    "id": "4dafe7f1-c5e2-4a01-8696-fa323e44ff05",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4d6f0109-9eec-4f07-b561-7d01f1c5e6e1",
                    "path": "<Touchscreen>/pressure",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "press",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}